# implicit

./: .gitignore  Cargo.toml  view.html
doc/: api.md
examples/: badge.rs  circle.rs  collar.rs  display.rs  examples.rs  game.rs  helper.rs  pdf.rs  pouch.rs  pyrimid.rs  quadtree_viewer.rs  rice.rs  stress_test.rs
src/: .quadtree.rs.swp  dash.rs  examples.rs  geom.rs  implementations.rs  implicit_viewer.rs  lib.rs  line_join.rs  main.rs  marching_squares.rs  quadtree.rs  quadtree_viewer.rs  scene.rs
src/formats/: mod.rs  output_device.rs  pdf.rs  svg.rs
src/private/: bitmap.rs  dash.rs  geom.rs  line_join.rs  marching_squares.rs  mod.rs  output_device.rs  pdf.rs  poly_group.rs  quadtree.rs  render.rs  render2.rs  sample_points.rs  svg.rs
src/scene/: drawing_quadtree_producer.rs  mod.rs
src/util/: geom.rs  mod.rs  quadtree.rs
src/vectorize/: dash.rs  line_gather.rs  line_join.rs  marching_squares.rs  mod.rs  render.rs  render2.rs
