[package]
name = "implicit"
version = "0.1.0"
authors = ["Ty Overby <ty@pre-alpha.com>"]
license = "GPL-2.0"
description = "A library for playing with 2d implicit geometry"

[dependencies]
rand = "0.3"
vecmath = "0.1.1"
itertools = "0.4.11"
crossbeam = "0.2.8"
fnv = "1.0.2"
num_cpus = "0.2.11"

[dependencies.flame]
path = "../flame"
#flame = "0.1.2"

[dev-dependencies]
lux = "0.1.1"
