[package]
name = "implicit"
version = "0.2.0"
authors = ["Ty Overby <ty@pre-alpha.com>"]
license = "GPL-2.0"
description = "A library for playing with 2d implicit geometry"

[dependencies]
rand = "0.3"
vecmath = "0.1.1"
itertools = "0.4.11"
fnv = "1.0.2"
num_cpus = "0.2.11"
rayon = "0.4.*"
thread-id = "2.0.0"
num-traits = "0.1.36"

[dependencies.flame]
version = "0.1.9"
#features = ["json"]

[dependencies.simd]
git = "https://github.com/rekka/simd.git"

[dev-dependencies]
lux = "0.1.2"
